--- a/home.html
+++ b/home.html
@@ -52,6 +52,10 @@
         </center> 
     </div>   
 
+    <div class="totalDiv">
+
+    </div>
+
     <div class="container d-flex justify-content-evenly mt-5 align-items-center flex-wrap sameDiv ">
     </div>
 
